[package]
name = "ail_runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
sha2 = "0.11.0"
ed25519-dalek = "3.0.0"
rand = "0.8.5"
hex = "0.4.3"

[[bin]]
name = "ail-cli"
path = "src/bin/ail_cli.rs"

# Проход 2: клиент бинарного транспорта (Binary Delta Streaming)
[[bin]]
name = "ail-binary-client"
path = "src/bin/ail_binary_client.rs"
